--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,11 @@ services:
     ports:
       - 9200:9200
       - 9300:9300
+  kibana:
+    image: docker.elastic.co/kibana/kibana-oss:6.2.4
+    environment:
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+    depends_on:
+     - elasticsearch  
+    ports:
+      - 5601:5601  
